2011-03-08  Anitha Boyapati <anitha.boyapati@atmel.com>

	* include/avr/power.h: Fix #endif error for Xmega A series.

2011-03-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom163.h: Poison deprecated items.
	* include/avr/iom165.h: Same.
	* include/avr/iom165p.h: Same.
	* include/avr/iom169.h: Same.
	* include/avr/iom169p.h: Same.

2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom162.h: Poison deprecated items.

2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom161.h: Poison deprecated items.

2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom16.h: Poison deprecated items.

2011-03-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom103.h: Poison deprecated items.

2011-03-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom128.h: Poison deprecated items.

2011-03-02  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23234.
	* include/avr/iousbxx2.h: Add *_vect_num definitions.
	* include/avr/iousbxx6_7.h: Same.
	* include/avr/iotnx61.h: Same.
	* include/avr/iotn43u.h: Same.
	* include/avr/iotn48.h: Same.
	* include/avr/iotn88.h: Same.
	* include/avr/iotnx4.h: Same.
	* include/avr/iotnx5.h: Same.
	* include/avr/iotn28.h: Same.
	* include/avr/iotn26.h: Same.
	* include/avr/iotn11.h: Same.
	* include/avr/iotn12.h: Same.
	* include/avr/iotn13.h: Same.
	* include/avr/iotn15.h: Same.
	* include/avr/iotn167.h: Same.
	* include/avr/iotn22.h: Same.
	* include/avr/iotn2313.h: Same.
	* include/avr/iom103.h: Same.
	* include/avr/iom128.h: Same.
	* include/avr/iom1284.h: Same.
	* include/avr/iom16.h: Same.
	* include/avr/iom161.h: Same.
	* include/avr/iom162.h: Same.
	* include/avr/iom163.h: Same.
	* include/avr/iomxxhva.h: Same.
	* include/avr/iomxx4.h: Same.
	* include/avr/iomxx0_1.h: Same.
	* include/avr/iomx8.h: Same.
	* include/avr/iom88p.h: Same.
	* include/avr/iom8535.h: Same.
	* include/avr/iom8515.h: Same.