@@ -1,5 +1,10 @@
+2011-03-08  Eric B. Weddington  <eric.weddington@atmel.com>
+
+    * include/avr/iom32.h: Poison deprecated items.
+	
 2011-03-08  Anitha Boyapati <anitha.boyapati@atmel.com>
 
+	Fix for bug #32698.
 	* include/avr/power.h: Fix #endif error for Xmega A series.
 
 2011-03-06  Eric B. Weddington  <eric.weddington@atmel.com>
